# 3-Check-Chess

./: .editorconfig  .gitignore  .gitmodules  3  3_Check_Chess  CMakeLists.txt  Makefile  README.md  clear.sh  getCmds.sh  lol  makeCmdFromDebugFile.cpp  out.txt  out2.txt  output.txt  pack.sh  parser  run.sh  run.vcxproj  run.vcxproj.filters  scores  xboard.debug
Include/: AlgoPicker.h  Algorithm.h  ChessPiece.h  EndGame.h  Engine.h  Table.h  Tree.h  Vec2.h  common.h  tools.h
Source/: AlgoPicker.cpp  Algorithm.cpp  ChessPiece.cpp  EndGame.cpp  Engine.cpp  Table.cpp  Tree.cpp  Vec2.cpp  main.cpp  tools.cpp
err/: 1  2  4  5  6  7
